--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -10,8 +10,8 @@ on:
   #   branches: [ "main" ]
 
 
-# permissions:
-#   contents: read
+# permissions: 
+#   contents: read dddd
 
 jobs:
   build:
