--- a/.github/workflows/python-app copy.yml
+++ b/.github/workflows/python-app copy.yml
@@ -4,18 +4,10 @@
 name: Python application
 
 on:
-  label:
-    types:
-      - created
-  push:
-    branches:
-      - u1
-
-# on:
-#   push:
-#     branches: [ "u1" ]
-  # pull_request:
-  #   branches: [ "main" ]
+  # push:
+  #   branches: [ "" ]
+  pull_request:
+    branches: [ "main" ]
 
 
 # permissions: 
@@ -41,10 +33,8 @@ jobs:
     #     if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Pull
       run: |
-          git branch
-
-      # git pull origin u1
-      # git push origin qa
+        git pull origin u1
+        git push origin qa
     
     # - name: Lint with flake8
     #   run: |
